# forest-fire-prediction-engine

./: README.md  generate_global_dataset.py  global_forest_fire_dataset.csv  pyproject.toml
backend/: main.py
eda/: perform_eda.py  summary_report.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  GlobeView.jsx  index.css
ml_pipeline/: train_models.py
