[project]
name = "forest-fire-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
]
